k8s/overlays/dev/deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medal-bot
spec:
  replicas: 1 # En desarrollo queremos 2 réplicas
  template:
    spec:
      containers:
        - name: medal-bot
